# clean-architecture-textbook-codealong

./: README.md  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
auctions/: __init__.py  auction.py
auctions/application/: auction.py
auctions/application/repositories/: auctions.py
auctions/application/use_cases/: placing_bid.py
auctions/domain/entities/: auction.py  bid.py
auctions/tests/application/use_cases/: test_placing_bid.py
auctions/tests/domain/entities/: test_auction_tests.py
auctions_infrastructure/auctions_infrastructure/: __init__.py
auctions_infrastructure/auctions_infrastructure/repositories/: in_memory_auctions_repository.py
bids/: bid.py
main/main/: __init__.py
placing_bid/: money.py  placing_bid.py
placing_bid/factories/: dollars.py
tests/: test_auction_tests.py  test_placing_bid.py
web_app/: dev-requirements.txt  pyproject.toml  requirements.txt
web_app/web_app/: app.py
web_app/web_app/blueprints/: auctions.py
web_app/web_app/serialization/: dto.py  fields.py
