[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my_web_app"
classifiers = ["Private :: Do Not Upload"]
version = "0"
dependencies = ["Flask", "Flask-Injector", "Flask-Login", "marshmallow", "marshmallow-dataclass"]

[project.optional-dependencies]
dev = ["pytest"]